src/snapshots/digisurf__app__tests__render_app_with_bus_values.snap
---
source: src/app.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│DigiSurf | Time: 0 to 200 of 200                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Signals───────┐                               ⢰⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│binary_signal │⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠚                                "
"│              │⣆⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀0A⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣰⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀0F⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀"
"│narrow_bus    │⠃                        ⠘                                      "
"│              │⣆⣀⣀⣀⣀⣀DEAD⣀⣀⣀⣀⣀⣰⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀BEEF⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣰⣀⣀⣀⣀⣀⣀CAFE⣀⣀⣀⣀⣀⣀"
"│wide_bus      │⠃              ⠘                               ⠘                "
"│              │⣆⣀⣀⣀⣀⣀⣀⣀00⣀⣀⣀⣀⣀⣀⣀⣀⣰⣀⣀⣀⣀⣀⣀⣀⣀XZ⣀⣀⣀⣀⣀⣀⣀⣀⣰⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀FF⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀"
"│mixed_bus     │⠃                 ⠘                  ⠘                          "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"└──────────────┘                                                                "
"Normal──────────────────────────────────────────────────────────────────────────"
" ':' for command mode. :q, then <Enter> to quit. :h then <Enter> for help.      "
"                                                                                "
