src/snapshots/digisurf__app__tests__render_app_with_markers.snap
---
source: src/app.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│DigiSurf | Time: 0 to 50 of 100 | M1: 25 | M2: 75 | Δ: 50                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Signals───────┐                               ⢸                                "
"│signal 0      │⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⢸⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │                               ⢸                                "
"│              │                               ⢸                                "
"│              │                               ⢸                                "
"│              │                               ⢸                                "
"│              │                               ⢸                                "
"│              │                               ⢸                                "
"│              │                               ⢸                                "
"│              │                               ⢸                                "
"│              │                               ⢸                                "
"│              │                               ⢸                                "
"│              │                               ⢸                                "
"└──────────────┘                               ⢸                                "
"Normal──────────────────────────────────────────────────────────────────────────"
" ':' for command mode. :q, then <Enter> to quit. :h then <Enter> for help.      "
"                                                                                "
