src/snapshots/digisurf__app__tests__render_empty_app.snap
---
source: src/app.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│DigiSurf | Time: 0 to 50 of 0                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Signals───────┐                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"└──────────────┘                                                                "
"Normal──────────────────────────────────────────────────────────────────────────"
" ':' for command mode. :q, then <Enter> to quit. :h then <Enter> for help.      "
"                                                                                "
