src/snapshots/digisurf__app__tests__scroll_down.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                0      50      100     150     200     250     300     350      "
"                                                                                "
"┌Signals───────┐       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_e      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_f      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_g      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_h      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_i      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_j      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_k      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"└──────────────┘                                                                "
"Normal──────────────────────────────────────────────────────────────────────────"
" ':' for command mode. :q, then <Enter> to quit. :h then <Enter> for help.      "
"                                                                                "
