src/snapshots/digisurf__app__tests__scroll_up.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                0      50      100     150     200     250     300     350      "
"                                                                                "
"┌Signals───────┐       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_a      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_b      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_c      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_d      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_e      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_f      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │       ⢰⠒⠒⠒⠒⠒⠒⠒⢲       ⢰⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│signal_g      │⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠚       ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"└──────────────┘                                                                "
"Normal──────────────────────────────────────────────────────────────────────────"
" ':' for command mode. :q, then <Enter> to quit. :h then <Enter> for help.      "
"                                                                                "
